--- a/book/_config.yml
+++ b/book/_config.yml
@@ -38,6 +38,7 @@ sphinx:
     - download_link_replacer
     - sphinx.ext.extlinks
     - sphinx_image_inverter
+    - sphinx_tudelft_theme
 
 bibtex_bibfiles: 
   - references.bib
